--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -30,12 +30,15 @@
 }
 
 .gallery-carousel {
+  padding-inline: 1.5rem;
+  gap: 1.5rem;
   margin: 0 auto;
   width: 100%;
   padding-bottom: 3rem;
   cursor: grab;
   display: flex;
   overflow-x: scroll;
+  overflow-y: visible;
 
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -45,9 +48,8 @@
   }
 
   & img {
-    margin-inline: 1.5rem;
-    max-width: 95vw;
-    height: 76vh;
+    max-width: 88vw;
+    height: 77vh;
   }
 
   @media only screen and (min-width: 1200px) {
